Update MH.Lookup specific test cases against Java 14 Spec
The test change is to reorganize the existing test suites
specific to MH.Lookup plus new tests intended for Java 14
to ensure the test cases in Java 8, 11 and 14 are 
executed correctly due to the incompatibility 
of MH.Lookup introduced since Java 14.

Signed-off-by: Cheng Jin <jincheng@ca.ibm.com>